[QuangHV7]: Fix Error - Can’t set headers after they are sent to the client
