# src/controllers/user.controller.ts
@@ -28,23 +28,23 @@ export class UserController {
   }
 
   @Get("/")
-  public getAllUser = async (req: Request, res: Response) => {
+  public getAllUser = async (req: Request, res: Response): Promise<UserDTO[] | any> => {
     let dataResponse = new DataResponse(null, 200, "Successfully");
     try {
       let users = await this.userService.getAllUser();
 
       dataResponse.result = users;
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     } catch (error) {
       dataResponse.statusCode = 500;
       dataResponse.message = "Internal server error";
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     }
   };
 
-  public getUserById = async (req: Request, res: Response) => {
+  public getUserById = async (req: Request, res: Response): Promise<UserDTO | any> => {
     let dataResponse = new DataResponse(null, 200, "Successfully");
     try {
       const id = Number(req.params.id);
@@ -56,16 +56,16 @@ export class UserController {
         dataResponse.message = "User not found";
       }
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     } catch (error) {
       dataResponse.statusCode = 500;
       dataResponse.message = "Internal server error";
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     }
   };
 
-  public create = async (req: Request, res: Response) => {
+  public create = async (req: Request, res: Response): Promise<UserDTO | any> => {
     let dataResponse = new DataResponse(null, 201, "Successfully created");
     try {
       const userDTO: UserDTO = req.body;
@@ -73,16 +73,16 @@ export class UserController {
 
       dataResponse.result = userCreated;
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     } catch (error) {
       dataResponse.statusCode = 500;
       dataResponse.message = "Internal server error";
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     }
   };
 
-  public update = async (req: Request, res: Response) => {
+  public update = async (req: Request, res: Response): Promise<UserDTO | any> => {
     let dataResponse = new DataResponse(null, 200, "Successfully updated");
     try {
       const userDTO: UserDTO = req.body;
@@ -90,16 +90,16 @@ export class UserController {
 
       dataResponse.result = userUpdated;
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     } catch (error) {
       dataResponse.statusCode = 500;
       dataResponse.message = "Internal server error";
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     }
   };
 
-  public delete = async (req: Request, res: Response) => {
+  public delete = async (req: Request, res: Response): Promise<UserDTO | any> => {
     let dataResponse = new DataResponse(null, 200, "Successfully deleted");
     try {
       const id = Number(req.params.id);
@@ -112,12 +112,13 @@ export class UserController {
         dataResponse.message = "User not found";
       }
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
+
     } catch (error) {
       dataResponse.statusCode = 500;
       dataResponse.message = "Internal server error";
 
-      res.status(dataResponse.statusCode).send(dataResponse).json();
+      return res.status(dataResponse.statusCode).send(dataResponse);
     }
   };
 
@@ -125,10 +126,16 @@ export class UserController {
    * Configure the routes of controller
    */
   public routes() {
-    this.router.get("/", [checkJwt, checkRole(["ROLE_ADMIN"])], this.getAllUser);
-    this.router.get("/:id", [checkJwt, checkRole(["ROLE_ADMIN"])], this.getUserById);
-    this.router.post("/", [checkJwt, checkRole(["ROLE_ADMIN"])], this.create);
-    this.router.put("/", [checkJwt, checkRole(["ROLE_ADMIN"])], this.update);
-    this.router.delete("/:id", [checkJwt, checkRole(["ROLE_ADMIN"])], this.delete);
+    // this.router.get("/", [checkJwt, checkRole(["ROLE_ADMIN"])], this.getAllUser);
+    // this.router.get("/:id", [checkJwt, checkRole(["ROLE_ADMIN"])], this.getUserById);
+    // this.router.post("/", [checkJwt, checkRole(["ROLE_ADMIN"])], this.create);
+    // this.router.put("/", [checkJwt, checkRole(["ROLE_ADMIN"])], this.update);
+    // this.router.delete("/:id", [checkJwt, checkRole(["ROLE_ADMIN"])], this.delete);
+
+    this.router.get("/", this.getAllUser);
+    this.router.get("/:id", this.getUserById);
+    this.router.post("/", this.create);
+    this.router.put("/", this.update);
+    this.router.delete("/:id", this.delete);
   }
 }
