# src/swagger.json
@@ -11,7 +11,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080/api"
+      "url": "http://localhost:8080/"
     }
   ],
   "definitions": {
@@ -20,10 +20,12 @@
       "required": ["username", "password"],
       "properties": {
         "username": {
-          "type": "string"
+          "type": "string",
+          "example": "admin"
         },
         "password": {
-          "type": "string"
+          "type": "string",
+          "example": "123"
         },
         "remember": {
           "type": "boolean"
@@ -35,19 +37,26 @@
       "required": ["username", "password"],
       "properties": {
         "username": {
-          "type": "string"
+          "type": "string",
+          "example": "quanghv"
         },
         "password": {
-          "type": "string"
+          "type": "string",
+          "example": "123"
         },
         "fullName": {
-          "type": "string"
+          "type": "string",
+          "example": "Hà Văn Quang"
+        },
+        "role": {
+          "type": "string",
+          "example": "ROLE_USER"
         }
       }
     }
   },
   "paths": {
-    "/auth/login": {
+    "/api/auth/login": {
       "post": {
         "tags": ["Auth Controller"],
         "summary": "Authorization - Login api retrieving token",
@@ -90,10 +99,10 @@
         }
       }
     },
-    "/auth/register": {
+    "/api/auth/register": {
       "post": {
         "tags": ["Auth Controller"],
-        "summary": "Authorization - Register api create new account",
+        "summary": "Authorization - Register user",
         "requestBody": {
           "description": "UserDTO",
           "required": true,
@@ -133,39 +142,101 @@
         }
       }
     },
-    "/user": {
-      "post": {
+    "/api/user": {
+      "get": {
         "tags": ["User Controller"],
-        "summary": "Authorization - Login api retrieving token",
-        "requestBody": {
-          "description": "",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/definitions/UserLoginDTO"
-              }
-            },
-            "application/xml": {
-              "schema": {
-                "$ref": "#/definitions/UserLoginDTO"
-              }
-            },
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/definitions/UserLoginDTO"
-              }
-            },
-            "text/plain": {
-              "schema": {
-                "type": "object"
+        "summary": "Get the list of users",
+        "responses": {
+          "200": {
+            "description": "Successfully - List of users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/UserDTO"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/definitions/UserDTO"
+                }
+              },
+              "application/x-www-form-urlencoded": {
+                "schema": {
+                  "$ref": "#/definitions/UserDTO"
+                }
+              },
+              "text/plain": {
+                "schema": {
+                  "type": "object"
+                }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal server error"
           }
-        },
+        }
+      }
+    },
+    "/api/user/{id}": {
+      "get": {
+        "tags": ["User Controller"],
+        "summary": "Get user by id",
+        "produces": ["application/xml", "application/json"],
+        "operationId": "getUserById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "Successfully - User Info",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/UserDTO"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/definitions/UserDTO"
+                }
+              },
+              "application/x-www-form-urlencoded": {
+                "schema": {
+                  "$ref": "#/definitions/UserDTO"
+                }
+              },
+              "text/plain": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
